--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,3 +2,6 @@
 
 <%= link_to 'Home', posts_path %>
 <%= link_to 'Edit', edit_post_path(@post) %>
+<%= link_to 'Delete', post_path(@post),
+                      :data => {
+                      :method => "delete"} %>
