--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,27 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<header>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Hacker News</a>
+      </div>
+      <div>
+        <ul class="nav navbar-nav">
+          <li><a href="/posts">Home</a></li>
+          <li><a href="/posts">Comments</a></li>
+          <li><a href="/posts">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 <body>
 
-<%= yield %>
-
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
