--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <h3> <%= @post.description %> </h3>
+<h5> Votes: <%= @post.votes %> </h5>
 
 <%= link_to 'Home', posts_path %>
 <%= link_to 'Edit', edit_post_path(@post) %>
-<%= link_to 'Delete', post_path(@post),
-                      :data => {
-                      :method => "delete"} %>
+<%= link_to 'Delete', post_path(@post),:method => "delete" %>
+<%= link_to 'Vote', post_path(@post, :vote => "up"), :method => "patch" %>
