Add functionality to delete a comment from post_show path

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul style="list-style: none">
   <% @posts.each do |post| %>
-    <li><%= link_to post.description, post_path(post) %></li>
+    <li><%= link_to '^', post_path(post, :vote => "up"), :method => "patch" %> <%= link_to post.description, post_path(post) %></li>
   <% end %>
 </ul>
 
