--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,14 +2,14 @@
 <h5> Votes: <%= @post.votes %> </h5>
 <h4> Comments: </h4>
 
-<ul>
-  <% @post.comments.each do |comment| %>
-    <li><%= comment.name %> -- <%= comment.report %></li>
+<ul style="list-style: none">
+  <% @post.comments.order(created_at: :desc).each do |comment| %>
+    <li><%= link_to '[X]', post_comment_path(@post, comment), :method => "delete" %>  <%= comment.name %> -- <%= comment.report %></li>
   <% end %>
 </ul>
 
-<%= link_to 'Home', posts_path %>
-<%= link_to 'Edit', edit_post_path(@post) %>
-<%= link_to 'Delete', post_path(@post),:method => "delete" %>
-<%= link_to 'Vote', post_path(@post, :vote => "up"), :method => "patch" %>
-<%= link_to 'Add a Comment', new_post_comment_path(@post) %>
+<p><%= link_to 'Home', posts_path %>  |
+<%= link_to 'Edit', edit_post_path(@post) %>  |
+<%= link_to 'Delete', post_path(@post),:method => "delete" %>  |
+
+<%= link_to 'Add a Comment', new_post_comment_path(@post) %></p>
